Fixes #130 Clean-up tests